--- a/howto.css
+++ b/howto.css
@@ -1,20 +1,24 @@
 body {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
-  }
+}
 
-  ul {
-	margin:0;
-	padding:0
-  }
+ul {
+	margin: 0;
+	padding: 0
+}
 
-  li {
-	display:block;
-	padding:20px 10px;
-	background:white;
-	border-bottom:solid 1px gray;
-	}
-	
-	#sqlOutputArea {
-		margin-top: 50px ;
-	}
+li {
+	display: block;
+	padding: 20px 10px;
+	background: white;
+	border-bottom: solid 1px gray;
+}
+
+#sqlOutputArea {
+	margin-top: 50px;
+}
+
+.hidden {
+	display: none;
+}
